<resources>
    <string name="app_name">Mkopo Popote</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="dontHave">Don\'t have an account?</string>
    <string name="create">Create one</string>
    <string name="buttonSignIn">Sign In</string>
    <string name="passwordHint">Enter Password</string>
    <string name="phoneHint">+2547XXXXXXXX</string>
    <string name="introText">Thank you for installing - let\s get you setup!</string>
    <string name="date_of_birth">Date of Birth (e.g.  YYYY-MM-DD)</string>
    <string name="email_address">Email Address</string>
    <string name="enter_id_no">Enter ID No</string>
    <string name="last_name">Last Name</string>
    <string name="buttonNext">Next</string>
    <string name="first_name">First Name</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_the_details_below">Enter the details below..</string>
    <string name="phone_no_254xxxxxxxxx">Phone No: 254XXXXXXXXX</string>

    <string-array name="gender_array">
        <item>Please select your gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
